Fixed nav bar items, size and spacing.

--- a/code/css/html-info.css
+++ b/code/css/html-info.css
@@ -47,7 +47,8 @@ header nav ul {
     justify-content: center;
     align-items: center;
     padding: 0; 
-    margin: 0; 
+    margin: 20px; 
+    gap: 1em;
 }
 
 header nav ul li {
@@ -63,14 +64,13 @@ header nav ul li {
 
 .return-main img,
 .advance-history img {
-    width: 80%;
-    height: 80;
+    width: 100%;
+    height: 30px;
 }
 
 .nav-img-meny img {
-    width: 20%;
-    height: auto;
-    align-self: center;
+    width: 100%;
+    height: 100px;
 }
 
 /* Foreground Section */
